New how-works copy

--- a/client/index.html
+++ b/client/index.html
@@ -84,8 +84,8 @@
       <h2 class="content-head is-center">How we help</h2>
       <div class="pure-g">
         <div class="l-box sides-only pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-          <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/tailored.png"> Tailored</h3>
-          <p>Get actionable advice from an expert who's been there, done that.</p>
+          <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/unlock.png"> Actionable</h3>
+          <p>Get tailored advice from an expert who's been there, done that, and can help you with exactly what you need.</p>
         </div>
         <div class="l-box sides-only pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
           <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/targeted.png"> Targeted</h3>
@@ -96,8 +96,8 @@
           <p>Get help while it's still relevant to you.</p>
         </div>
         <div class="l-box sides-only pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-          <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/anonymous.png"> Anonymous</h3>
-          <p>Ask pointed questions and get reliable, unfiltered answers.</p>
+          <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/reliable.png"> Reliable</h3>
+          <p>Ask pointed questions and get unfiltered answers, with the option to stay anonymous, if you prefer.</p>
         </div>
       </div>
     </div>
