Emphasize blockquote parts

--- a/client/index.html
+++ b/client/index.html
@@ -59,19 +59,19 @@
         <div class="pure-g">
           <div class="m-box pure-u-1 pure-u-lg-1-3">
             <blockquote>
-              <p>"I wanted to break into Tech but had an atypical background. Talking to someone who broke into the exact role I wanted with a similar background was crucial in my job hunt."</p>
+              <p>"I wanted to break into Tech but had an atypical background. Talking to someone who broke into the <span class="emphasize">exact role</span> I wanted with a <span class="emphasize">similar background</span> was crucial in my job hunt."</p>
               <cite>- Product Analyst, Facebook</cite>
             </blockquote>
           </div>
           <div class="m-box pure-u-1 pure-u-lg-1-3">
             <blockquote>
-              <p>"My advisor helped me fix many of the crucial mistakes I was making in my interviews and helped me prepare for the specific questions I could expect at his company and others like it."</p>
+              <p>"My advisor helped me fix many of the crucial mistakes I was making in my interviews and helped me <span class="emphasize">prepare for the specific questions</span> I could expect at his company and others like it."</p>
               <cite>- Brand Manager, Kraft </cite>
             </blockquote>
           </div>
           <div class="m-box pure-u-1 pure-u-lg-1-3">
             <blockquote>
-              <p>"I had a few offers I was really excited about, but talking to people who had worked in my exact role let me get the inside scoop on pay, culture, and work-life balance so I could make the right choice for my career."</p>
+              <p>"I had several offers I was really excited about, but talking to people who had worked in my exact role let me get the <span class="emphasize">inside scoop</span> on pay, culture, and work-life balance so I could make the right choice for my career."</p>
               <cite>
                 - Consultant, Accenture
               </cite>
