Update landing page copy for network size

--- a/client/request/index.html
+++ b/client/request/index.html
@@ -458,7 +458,7 @@
 
         <section>
           <legend class="pure-u-1">
-            <h2 class="no-margin">Using the info you've provided, we'll find your best match.</h2>
+            <h2 class="no-margin">Using the info you've provided, we'll find your best match by tapping into our network of thousands of professionals.</h2>
           </legend>
 
           <!-- <h4 class="no-margin indented">How many hours would you like to reserve with your advisor?</h4> -->
