--- a/client/request/index.html
+++ b/client/request/index.html
@@ -245,107 +245,6 @@
                   </div>
                 </div>
               </div>
-
-              <div class="pure-g example">
-                <div class="pure-u-1 pure-u-lg-1-5">
-                  <fieldset class="form-group">
-                    <span>currently works</span>
-                    <i class="bar"></i>
-                  </fieldset>
-                </div>
-                <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
-                  <div class="pure-g">
-                    <p class="pure-u-1 pure-u-md-1-3 is-center">
-                      as a
-                    </p>
-                    <fieldset class="pure-u-1 pure-u-md-2-3 form-group">
-                      <span>Project Manager</span>
-                      <i class="bar"></i>
-                    </fieldset>
-                  </div>
-                </div>
-                <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
-                  <div class="pure-g">
-                    <p class="pure-u-1 pure-u-md-1-3 is-center">
-                      at
-                    </p>
-                    <fieldset class="pure-u-1 pure-u-md-2-3 form-group">
-                      <span>Google</span>
-                      <i class="bar"></i>
-                    </fieldset>
-                  </div>
-                </div>
-
-                <div class="pure-u-1 pure-u-lg-1-5">
-                  <div class="pure-g">
-                    <fieldset class="form-group pure-u-1-3">
-                      <span>or</span>
-                      <i class="bar"></i>
-                    </fieldset>
-                    <fieldset class="form-group pure-u-2-3">
-                      <span>has worked</span>
-                      <i class="bar"></i>
-                    </fieldset>
-                  </div>
-                </div>
-                <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
-                  <div class="pure-g">
-                    <p class="pure-u-1 pure-u-md-1-3 is-center">
-                      as a
-                    </p>
-                    <fieldset class="pure-u-1 pure-u-md-2-3 form-group">
-                      <span>Project Manager</span>
-                      <i class="bar"></i>
-                    </fieldset>
-                  </div>
-                </div>
-                <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
-                  <div class="pure-g">
-                    <p class="pure-u-1 pure-u-md-1-3 is-center">
-                      at
-                    </p>
-                    <fieldset class="pure-u-1 pure-u-md-2-3 form-group">
-                      <span>any large tech company</span>
-                      <i class="bar"></i>
-                    </fieldset>
-                  </div>
-                </div>
-
-                <div class="pure-u-1 pure-u-lg-1-5">
-                  <div class="pure-g">
-                    <fieldset class="form-group pure-u-1-3">
-                      <span>and</span>
-                      <i class="bar"></i>
-                    </fieldset>
-                    <fieldset class="form-group pure-u-2-3">
-                      <span>has studied</span>
-                      <i class="bar"></i>
-                    </fieldset>
-                  </div>
-                </div>
-                <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
-                  <div class="pure-g">
-                    <p class="pure-u-1 pure-u-md-1-3 is-center">
-                      as a
-                    </p>
-                    <fieldset class="pure-u-1 pure-u-md-2-3 form-group">
-                      <span>MBA student</span>
-                      <i class="bar"></i>
-                    </fieldset>
-                  </div>
-                </div>
-                <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
-                  <div class="pure-g">
-                    <p class="pure-u-1 pure-u-md-1-3 is-center">
-                      at
-                    </p>
-                    <fieldset class="pure-u-1 pure-u-md-2-3 form-group">
-                      <span>Columbia Business School</span>
-                      <i class="bar"></i>
-                    </fieldset>
-                  </div>
-                </div>
-              </div>
             </div>
           </div>
 
@@ -361,13 +260,12 @@
                 </div>
                 <div class="pure-u-1">
                   <fieldset class="pure-u-1 pure-u-md-1-3 form-group">
-                    <input type="url" name="linkedin" required>
+                    <input type="text" pattern="^((http[s]?|ftp):\/)?\/?([^:\/\s]+)((\/\w+)*\/)([\w\-\.]+[^#?\s]+)(.*)?(#[\w\-]+)?$" required/>
                     <label class="control-label" for="input">LinkedIn URL</label><i class="bar"></i>
                   </fieldset>
                 </div>
               </div>
             </fieldset>
-          </div>
 
           <div class="indented">
             <fieldset class="form-group">
@@ -398,7 +296,7 @@
               </div>
               <div class="pure-u-1">
                 <fieldset class="pure-u-1 pure-u-md-1-3 form-group" required>
-                  <input type="url" required/>
+                  <input type="text" pattern="^((http[s]?|ftp):\/)?\/?([^:\/\s]+)((\/\w+)*\/)([\w\-\.]+[^#?\s]+)(.*)?(#[\w\-]+)?$" required/>
                   <label class="control-label" for="input">LinkedIn URL</label><i class="bar"></i>
                 </fieldset>
               </div>
@@ -469,7 +367,7 @@
           <div class="indented">
             <div class="pure-u-1">
               <fieldset class="pure-u-1 pure-u-md-1-3 form-group" required>
-                <input type="number" min="0" required/>
+                <input type="text" pattern="^[$]?[\d,]+(?:\.[\d]{0,2})?$" min="0" required/>
                 <label class="control-label" for="input">Maximum price</label><i class="bar"></i>
               </fieldset>
             </div>
