--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
 <body>
   <header class="header">
     <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-      <a class="pure-menu-heading" href="">LegUp</a>
+      <a class="pure-menu-heading" href="/">LegUp</a>
       <ul class="pure-menu-list">
         <li class="pure-menu-item pure-menu-selected">
           <a href="#how">How It Works</a>
@@ -25,99 +25,101 @@
       </ul>
     </div>
   </header>
-  <div class="splash-container">
-    <div class="splash">
-      <h2 class="splash-head">Want to work at <span class="avoid-wrap"><span id="console">Google</span><span class="typed-cursor">|</span>?</span></h2>
-      <h1 class="splash-head sub-head">Get help from someone who's <span class="avoid-wrap">been there,&nbsp;</span><span class="avoid-wrap">done that.</span></h1>
-    </div>
-    <div class="main-cta">
-      <a class="pure-button pure-button-primary" href="./request">Get Connected</a>
-    </div>
-  </div>
-  <div class="content-wrapper">
-    <a class="anchor" id="how"></a>
-    <div class="content">
-      <h2 class="content-head is-center">How it works</h2>
-      <div class="pure-g">
-        <div class="l-box sides-only pure-u-1 pure-u-lg-1-3">
-          <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/request.png"> Request an advisor</h3>
-          <p>Tell us what advice you need, and from whom.</p>
-        </div>
-        <div class="l-box sides-only pure-u-1 pure-u-lg-1-3">
-          <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/talking.png"> We'll find a match</h3>
-          <p>We find the right person for you, and set up a conversation on your terms.</p>
-        </div>
-        <div class="l-box sides-only pure-u-1 pure-u-lg-1-3">
-          <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/hired.png"> Get results</h3>
-          <p>You pay your advisor for their time only after you get the help you need.</p>
-        </div>
+  <main>
+    <div class="splash-container">
+      <div class="splash">
+        <h2 class="splash-head">Want to work at <span class="avoid-wrap"><span id="console">Google</span><span class="typed-cursor">|</span>?</span></h2>
+        <h1 class="splash-head sub-head">Get help from someone who's <span class="avoid-wrap">been there,&nbsp;</span><span class="avoid-wrap">done that.</span></h1>
+      </div>
+      <div class="main-cta">
+        <a class="pure-button pure-button-primary" href="./request">Get Connected</a>
       </div>
     </div>
-    <div class="ribbon light-ribbon l-box pure-g">
-      <div class="pure-u-1">
-        <h2 class="content-head content-head-ribbon is-center">Testimonials</h2>
+    <div class="content-wrapper">
+      <a class="anchor" id="how"></a>
+      <div class="content">
+        <h2 class="content-head is-center">How it works</h2>
         <div class="pure-g">
-          <div class="m-box pure-u-1 pure-u-lg-1-3">
-            <blockquote>
-              <p>"I wanted to break into Tech but had an atypical background. Talking to someone who broke into the <span class="emphasize">exact role</span> I wanted with a <span class="emphasize">similar background</span> was crucial in my job hunt."</p>
-              <cite>- Product Analyst, Facebook</cite>
-            </blockquote>
+          <div class="l-box sides-only pure-u-1 pure-u-lg-1-3">
+            <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/request.png"> Request an advisor</h3>
+            <p>Tell us what advice you need, and from whom.</p>
           </div>
-          <div class="m-box pure-u-1 pure-u-lg-1-3">
-            <blockquote>
-              <p>"My advisor helped me fix many of the crucial mistakes I was making in my interviews and helped me <span class="emphasize">prepare for the specific questions</span> I could expect at his company and others like it."</p>
-              <cite>- Brand Manager, Kraft </cite>
-            </blockquote>
+          <div class="l-box sides-only pure-u-1 pure-u-lg-1-3">
+            <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/talking.png"> We'll find a match</h3>
+            <p>We find the right person for you, and set up a conversation on your terms.</p>
           </div>
-          <div class="m-box pure-u-1 pure-u-lg-1-3">
-            <blockquote>
-              <p>"I had several offers I was really excited about, but talking to people who had worked in my exact role let me get the <span class="emphasize">inside scoop</span> on pay, culture, and work-life balance so I could make the right choice for my career."</p>
-              <cite>
-                - Consultant, Accenture
-              </cite>
-            </blockquote>
+          <div class="l-box sides-only pure-u-1 pure-u-lg-1-3">
+            <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/hired.png"> Get results</h3>
+            <p>You pay your advisor for their time only after you get the help you need.</p>
           </div>
         </div>
       </div>
-    </div>
-    <div class="content" id="why">
-      <h2 class="content-head is-center">How we help</h2>
-      <div class="pure-g">
-        <div class="l-box sides-only pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-          <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/unlock.png"> Actionable</h3>
-          <p>Get tailored advice from an expert who's been there, done that, and can help you with exactly what you need.</p>
-        </div>
-        <div class="l-box sides-only pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-          <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/targeted.png"> Targeted</h3>
-          <p>Speak with someone who's uniquely qualified to help you.</p>
-        </div>
-        <div class="l-box sides-only pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-          <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/quick.png"> Quick</h3>
-          <p>Get help while it's still relevant to you.</p>
-        </div>
-        <div class="l-box sides-only pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-          <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/reliable.png"> Reliable</h3>
-          <p>Ask pointed questions and get unfiltered answers, with the option to stay anonymous, if you prefer.</p>
-        </div>
-      </div>
-    </div>
-    <div class="content ribbon">
-      <h2 class="content-head is-center">Join our community</h2>
-      <div class="pure-g">
-        <div class="pure-u-1 is-center">
-              <a class="pure-button" href="./request">
-                Get Connected
-              </a>
-              <a class="pure-button" href="./expert">
-                Become an Advisor
-              </a>
+      <div class="ribbon light-ribbon l-box pure-g">
+        <div class="pure-u-1">
+          <h2 class="content-head content-head-ribbon is-center">Testimonials</h2>
+          <div class="pure-g">
+            <div class="m-box pure-u-1 pure-u-lg-1-3">
+              <blockquote>
+                <p>"I wanted to break into Tech but had an atypical background. Talking to someone who broke into the <span class="emphasize">exact role</span> I wanted with a <span class="emphasize">similar background</span> was crucial in my job hunt."</p>
+                <cite>- Product Analyst, Facebook</cite>
+              </blockquote>
+            </div>
+            <div class="m-box pure-u-1 pure-u-lg-1-3">
+              <blockquote>
+                <p>"My advisor helped me fix many of the crucial mistakes I was making in my interviews and helped me <span class="emphasize">prepare for the specific questions</span> I could expect at his company and others like it."</p>
+                <cite>- Brand Manager, Kraft </cite>
+              </blockquote>
+            </div>
+            <div class="m-box pure-u-1 pure-u-lg-1-3">
+              <blockquote>
+                <p>"I had several offers I was really excited about, but talking to people who had worked in my exact role let me get the <span class="emphasize">inside scoop</span> on pay, culture, and work-life balance so I could make the right choice for my career."</p>
+                <cite>
+                  - Consultant, Accenture
+                </cite>
+              </blockquote>
+            </div>
+          </div>
         </div>
       </div>
+      <div class="content" id="why">
+        <h2 class="content-head is-center">How we help</h2>
+        <div class="pure-g">
+          <div class="l-box sides-only pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+            <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/unlock.png"> Actionable</h3>
+            <p>Get tailored advice from an expert who's been there, done that, and can help you with exactly what you need.</p>
+          </div>
+          <div class="l-box sides-only pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+            <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/targeted.png"> Targeted</h3>
+            <p>Speak with someone who's uniquely qualified to help you.</p>
+          </div>
+          <div class="l-box sides-only pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+            <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/quick.png"> Quick</h3>
+            <p>Get help while it's still relevant to you.</p>
+          </div>
+          <div class="l-box sides-only pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+            <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/reliable.png"> Reliable</h3>
+            <p>Ask pointed questions and get unfiltered answers, with the option to stay anonymous, if you prefer.</p>
+          </div>
+        </div>
+      </div>
+      <div class="content ribbon">
+        <h2 class="content-head is-center">Join our community</h2>
+        <div class="pure-g">
+          <div class="pure-u-1 is-center">
+                <a class="pure-button" href="./request">
+                  Get Connected
+                </a>
+                <a class="pure-button" href="./expert">
+                  Become an Advisor
+                </a>
+          </div>
+        </div>
+      </div>
+      <footer class="m-box ribbon dark-ribbon">
+        <a href="mailto:moashared@gmail.com">Contact Us</a>
+      </footer>
     </div>
-    <footer class="m-box ribbon dark-ribbon">
-      <a href="mailto:moashared@gmail.com">Contact Us</a>
-    </footer>
-  </div>
+  </main>
 </body>
 <script type="text/javascript">
   (function() {
