--- a/client/request/index.html
+++ b/client/request/index.html
@@ -12,6 +12,11 @@
   <link href="../css/main.css" rel="stylesheet">
 </head>
 <body>
+  <header class="header">
+    <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
+      <a class="pure-menu-heading" href="/">LegUp</a>
+    </div>
+  </header>
   <main class="pure-u-1">
     <div class="content">
       <form class="pure-form md-l-box" id="survey">
@@ -173,40 +178,8 @@
           <div class="indented query-group" id="speak_with">
             <div class="queries">
               <div class="pure-g">
-                <div class="pure-u-1 pure-u-lg-1-5">
-                  <fieldset class="form-group" required>
-                    <select required>
-                      <option value="" selected disabled></option>
-                      <option value="worked">has worked</option>
-                      <option value="studied">has studied</option>
-                      <option value="works">works</option>
-                      <option value="studies">studies</option>
-                      <option value="other">other</option>
-                    </select>
-                    <label class="control-label" for="select">Select experience</label><i class="bar"></i>
-                  </fieldset>
-                </div>
-                <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
-                  <div class="pure-g">
-                    <p class="pure-u-1 pure-u-md-1-3 is-center">
-                      as a
-                    </p>
-                    <fieldset class="pure-u-1 pure-u-md-2-3 form-group" required>
-                      <input type="text" required/>
-                      <label class="control-label" for="input">Position</label><i class="bar"></i>
-                    </fieldset>
-                  </div>
-                </div>
-                <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
-                  <div class="pure-g">
-                    <p class="pure-u-1 pure-u-md-1-3 is-center">
-                      at
-                    </p>
-                    <fieldset class="pure-u-1 pure-u-md-2-3 form-group" required>
-                      <input type="text" required/>
-                      <label class="control-label" for="input">Company</label><i class="bar"></i>
-                    </fieldset>
-                  </div>
+                <div class="query-group">
+                  
                 </div>
               </div>
             </div>
