--- a/client/thankyou/index.html
+++ b/client/thankyou/index.html
@@ -12,6 +12,11 @@
   <link href="../css/main.css" rel="stylesheet">
 </head>
 <body>
+  <header class="header">
+    <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
+      <a class="pure-menu-heading" href="/">LegUp</a>
+    </div>
+  </header>
   <main class="pure-u-1">
     <div class="content">
       <section class="md-l-box">
