--- a/client/request/index.html
+++ b/client/request/index.html
@@ -175,49 +175,82 @@
           <legend class="pure-u-1">
             <h2 class="no-margin">I want to speak with someone who...</h2>
           </legend>
-          <div class="indented query-group" id="speak_with">
-            <div class="queries">
-              <div class="pure-g">
-                <div class="query-group">
-                  
-                </div>
-              </div>
-            </div>
 
-            <fieldset class="pure-u-1" id="contacts">
-              <h4 class="no-margin">Do you have any specific people in mind you'd like to contact?</h4>
-              <div class="pure-g query-group">
-                <div class="pure-u-1">
-                  <fieldset class="pure-u-1 pure-u-md-1-3 form-group">
-                    <input type="text" name="name" required>
-                    <label class="control-label" for="input">Name</label><i class="bar"></i>
-                  </fieldset>
-                </div>
-                <div class="pure-u-1">
-                  <fieldset class="pure-u-1 pure-u-md-1-3 form-group">
-                    <input type="text" pattern="^((http[s]?|ftp):\/)?\/?([^:\/\s]+)((\/\w+)*\/)([\w\-\.]+[^#?\s]+)(.*)?(#[\w\-]+)?$" required/>
-                    <label class="control-label" for="input">LinkedIn URL</label><i class="bar"></i>
-                  </fieldset>
-                </div>
-              </div>
-            </fieldset>
-
-            <div class="pure-u-1">
-              <fieldset class="pure-u-1 pure-u-md-1-3">
-                <div class="pure-u-1 pure-u-md-1-3 is-center float-right" id="speak_with_add_contact">
-                  <button class="button tight sm-fill no-margin" type="button"><span>+</span></button>
-                </div>
-                <div class="pure-u-1 pure-u-md-1-3 is-center float-left hide" id="speak_with_remove_contact">
-                  <button class="button tight red sm-fill" type="button"><span>-</span></button>
-                </div>
-                <div class="clear-float"></div>
+          <div class="indented">
+            <div class="query-group pure-g">
+              <fieldset class="pure-u-1 checkbox">
+                <label>
+                  <input type="checkbox" /><i class="helper"></i>works at the company
+                </label>
+                <label>
+                  <input type="checkbox"/><i class="helper"></i>works at a competitor
+                </label>
+                <label>
+                  <input type="checkbox"/><i class="helper"></i>works in the broader industry 
+                </label>
               </fieldset>
             </div>
 
-            <fieldset class="form-group">
-              <textarea required></textarea>
-              <label class="control-label" for="textarea">Anything else we should know about your ideal advisor?</label><i class="bar"></i>
+            <div class="query-group pure-g">
+              <fieldset class="pure-u-1 checkbox">
+                <label>
+                  <input type="checkbox" /><i class="helper"></i>works in the same role
+                </label>
+                <label>
+                  <input type="checkbox"/><i class="helper"></i>works with the role
+                </label>
+                <label>
+                  <input type="checkbox"/><i class="helper"></i>hires for the role
+                </label>
+              </fieldset>
+            </div>
+
+            <div class="query-group pure-g">
+              <fieldset class="pure-u-1 checkbox">
+                <label>
+                  <input type="checkbox" /><i class="helper"></i>currently works there
+                </label>
+                <label>
+                  <input type="checkbox"/><i class="helper"></i>has worked there in the past
+                </label>
+              </fieldset>
+            </div>
+          </div>
+
+          <fieldset class="form-group">
+            <textarea required></textarea>
+            <label class="control-label" for="textarea">Anything else we should know about your ideal advisor?</label><i class="bar"></i>
+          </fieldset>
+
+          <fieldset class="pure-u-1" id="contacts">
+            <h4 class="no-margin">Do you have any examples or specific people in mind you'd like to contact?</h4>
+            <div class="pure-g query-group">
+              <div class="pure-u-1">
+                <fieldset class="pure-u-1 pure-u-md-1-3 form-group">
+                  <input type="text" name="name" required>
+                  <label class="control-label" for="input">Name</label><i class="bar"></i>
+                </fieldset>
+              </div>
+              <div class="pure-u-1">
+                <fieldset class="pure-u-1 pure-u-md-1-3 form-group">
+                  <input type="text" pattern="^((http[s]?|ftp):\/)?\/?([^:\/\s]+)((\/\w+)*\/)([\w\-\.]+[^#?\s]+)(.*)?(#[\w\-]+)?$" required/>
+                  <label class="control-label" for="input">LinkedIn URL</label><i class="bar"></i>
+                </fieldset>
+              </div>
+            </div>
+          </fieldset>
+
+          <div class="pure-u-1">
+            <fieldset class="pure-u-1 pure-u-md-1-3">
+              <div class="pure-u-1 pure-u-md-1-3 is-center float-right" id="speak_with_add_contact">
+                <button class="button tight sm-fill no-margin" type="button"><span>+</span></button>
+              </div>
+              <div class="pure-u-1 pure-u-md-1-3 is-center float-left hide" id="speak_with_remove_contact">
+                <button class="button tight red sm-fill" type="button"><span>-</span></button>
+              </div>
+              <div class="clear-float"></div>
             </fieldset>
+          </div>
         </section>
 
         <section>
@@ -252,7 +285,7 @@
           </div>
 
           <div class="indented">
-            <div class="indented pure-g">
+            <div class="pure-g">
               <div class="pure-u-1 form-radio">
                 <fieldset required>
                   <div class="radio">
