--- a/client/request/index.html
+++ b/client/request/index.html
@@ -303,23 +303,40 @@
             </div>
           </div>
 
-          <h4 class="no-margin pure-u-1 indented">I would like to talk using</h4>
-          <div class="indented">
-            <div class="pure-g">
-              <div class="pure-u-1 pure-u-md-1-3">
-                <fieldset class="form-group" required>
-                  <select required>
-                    <option value="" selected disabled></option>
-                    <option value="phone">Phone</option>
-                    <option value="video">Video Chat</option>
-                    <option value="person">In Person</option>
-                    <option value="other">Other</option>
-                  </select>
-                  <label class="control-label" for="select">Select a medium</label><i class="bar"></i>
-                </fieldset>
+          <div class="form-group">
+            <h4 class="no-margin pure-u-1 indented">I would like to talk using</h4>
+            <div class="indented">
+              <div class="pure-g">
+                <div class="pure-u-1 pure-u-md-1-3">
+                  <fieldset class="form-group" required>
+                    <select required>
+                      <option value="" selected disabled></option>
+                      <option value="phone">Phone</option>
+                      <option value="video">Video Chat</option>
+                      <option value="person">In Person</option>
+                      <option value="other">Other</option>
+                    </select>
+                    <label class="control-label" for="select">Select a medium</label><i class="bar"></i>
+                  </fieldset>
+                </div>
               </div>
             </div>
           </div>
+
+          <div class="form-group">
+            <h4 class="no-margin pure-u-1 indented">Any deadline?</h4>
+            <div class="indented">
+              <div class="pure-g">
+                <div class="pure-u-1 pure-u-md-1-3">
+                  <fieldset class="pure-u-1 form-group" required>
+                    <input type="date" required/>
+                    <label class="control-label" for="input">Deadline</label><i class="bar"></i>
+                  </fieldset>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </section>
 
         <section>
@@ -340,9 +357,8 @@
 
           <!-- <br> -->
 
-          <h4 class="no-margin indented">What is the <span class="underline">most you'd pay</span> for your time with your advisor? (<span class="underline">We'll try for lower</span>, but need to know your ceiling).</h4>
-
-          <div class="indented">
+          <div class="indented query-group">
+            <h4 class="no-margin">What is the <span class="underline">most you'd pay</span> for your time with your advisor? (<span class="underline">We'll try for lower</span>, but need to know your ceiling).</h4>
             <div class="pure-u-1">
               <fieldset class="pure-u-1 pure-u-md-1-3 form-group" required>
                 <input type="text" pattern="^[$]?[\d,]+(?:\.[\d]{0,2})?$" min="0" required/>
