Add next steps before submit

--- a/client/request/index.html
+++ b/client/request/index.html
@@ -330,7 +330,7 @@
                 <div class="pure-u-1 pure-u-md-1-3">
                   <fieldset class="pure-u-1 form-group" required>
                     <input type="date" required/>
-                    <label class="control-label" for="input">Deadline</label><i class="bar"></i>
+                    <label class="control-label" for="input">mm/dd/yyyy</label><i class="bar"></i>
                   </fieldset>
                 </div>
               </div>
@@ -341,8 +341,9 @@
 
         <section>
           <legend class="pure-u-1">
-            <h2 class="no-margin">Using the info you've provided, we'll find your best match by tapping into our network of thousands of professionals.</h2>
+            <h2 class="no-margin">Using the info you've provided, we'll send you a list of potential matches.</h2>
           </legend>
+          <h4 class="indented no-top-margin ">You can then review the list and finalize terms with the advisor(s) of your choice.</h4>
 
           <!-- <h4 class="no-margin indented">How many hours would you like to reserve with your advisor?</h4> -->
 
