--- a/client/index.html
+++ b/client/index.html
@@ -42,11 +42,11 @@
         <div class="pure-g">
           <div class="l-box sides-only pure-u-1 pure-u-lg-1-3">
             <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/request.png"> Request an advisor</h3>
-            <p>Tell us what advice you need, and from whom.</p>
+            <p>Tell us what you need and who would be most qualified to help you.</p>
           </div>
           <div class="l-box sides-only pure-u-1 pure-u-lg-1-3">
             <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/talking.png"> We'll find a match</h3>
-            <p>We find the right person for you, and set up a conversation on your terms.</p>
+            <p>We connect you with someone who has the right knowledge or experience and set up a conversation on your terms.</p>
           </div>
           <div class="l-box sides-only pure-u-1 pure-u-lg-1-3">
             <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/hired.png"> Get results</h3>
@@ -60,19 +60,19 @@
           <div class="pure-g">
             <div class="m-box pure-u-1 pure-u-lg-1-3">
               <blockquote>
-                <p>"I wanted to break into Tech but had an atypical background. Talking to someone who broke into the <span class="emphasize">exact role</span> I wanted with a <span class="emphasize">similar background</span> was crucial in my job hunt."</p>
+                <p>"I wanted to break into Tech but had an atypical background. Talking to someone who broke into the <span>exact role</span> I wanted with a <span>similar background</span> was crucial in my job hunt."</p>
                 <cite>- Product Analyst, Facebook</cite>
               </blockquote>
             </div>
             <div class="m-box pure-u-1 pure-u-lg-1-3">
               <blockquote>
-                <p>"My advisor helped me fix many of the crucial mistakes I was making in my interviews and helped me <span class="emphasize">prepare for the specific questions</span> I could expect at his company and others like it."</p>
+                <p>"My advisor helped me fix many of the crucial mistakes I was making in my interviews and helped me <span>prepare for the specific questions</span> I could expect at his company and others like it."</p>
                 <cite>- Brand Manager, Kraft </cite>
               </blockquote>
             </div>
             <div class="m-box pure-u-1 pure-u-lg-1-3">
               <blockquote>
-                <p>"I had several offers I was really excited about, but talking to people who had worked in my exact role let me get the <span class="emphasize">inside scoop</span> on pay, culture, and work-life balance so I could make the right choice for my career."</p>
+                <p>"I had several offers I was really excited about, but talking to people who had worked in my exact role let me get the <span>inside scoop</span> on pay, culture, and work-life balance so I could make the right choice for my career."</p>
                 <cite>
                   - Consultant, Accenture
                 </cite>
@@ -86,15 +86,15 @@
         <div class="pure-g">
           <div class="l-box sides-only pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
             <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/unlock.png"> Actionable</h3>
-            <p>Get tailored advice from an expert who's been there, done that, and can help you with exactly what you need.</p>
+            <p>Access informed feedback to achieve your career goals.</p>
           </div>
           <div class="l-box sides-only pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
             <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/targeted.png"> Targeted</h3>
-            <p>Speak with someone who's uniquely qualified to help you.</p>
+            <p>Get tailored advice from someone who's uniquely qualified to help you.</p>
           </div>
           <div class="l-box sides-only pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
             <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/quick.png"> Quick</h3>
-            <p>Get help while it's still relevant to you.</p>
+            <p>Access information while it's still relevant to you. Have a specific deadline? Let us know.</p>
           </div>
           <div class="l-box sides-only pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
             <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/reliable.png"> Reliable</h3>
