Minor form nits

--- a/client/request/index.html
+++ b/client/request/index.html
@@ -71,7 +71,7 @@
               <div class="pure-g example">
                 <div class="pure-u-1 pure-u-lg-1-5">
                   <fieldset class="form-group">
-                    <span>Application revew / guidance</span>
+                    <span>Application review / guidance</span>
                     <i class="bar"></i>
                   </fieldset>
                 </div>
@@ -143,7 +143,7 @@
                       for
                     </p>
                     <fieldset class="pure-u-1 pure-u-md-2-3 form-group">
-                      <span>Entry vs. Mid Software Engineer</span>
+                      <span>Entry vs. Senior Software Engineer</span>
                       <i class="bar"></i>
                     </fieldset>
                   </div>
@@ -200,7 +200,7 @@
                   <input type="checkbox" name="works_same_role"/><i class="helper"></i>works in the same role
                 </label>
                 <label>
-                  <input type="checkbox" name="works_with_role"/><i class="helper"></i>works with the role
+                  <input type="checkbox" name="works_with_role"/><i class="helper"></i>works in a related role
                 </label>
                 <label>
                   <input type="checkbox" name="hires_for_role"/><i class="helper"></i>hires for the role
@@ -276,7 +276,7 @@
                 </fieldset>
               </div>
               <div class="pure-u-1">
-                <fieldset class="pure-u-1 pure-u-md-1-3 form-group" required>
+                <fieldset class="pure-u-1 pure-u-md-1-3 form-group">
                   <input type="text" pattern="^((http[s]?|ftp):\/)?\/?([^:\/\s]+)((\/\w+)*\/)([\w\-\.]+[^#?\s]+)(.*)?(#[\w\-]+)?$" required name="request_submitter_linkedin"/>
                   <label class="control-label" for="input">LinkedIn URL</label><i class="bar"></i>
                 </fieldset>
