Separate effect from list of words

--- a/client/career/index.html
+++ b/client/career/index.html
@@ -121,6 +121,7 @@
     </div>
   </main>
 </body>
+<script src="/js/typewriter.js" type="text/javascript"></script>
 <script type="text/javascript">
   (function() {
     var words = [
@@ -130,43 +131,7 @@
       'Airbnb',
     ];
 
-    var numWords = words.length;
-
-    var console = document.getElementById('console');
-
-    var fullWord = console.innerHTML,
-        currWord = fullWord;
-
-    var typespeed = 100,
-        pause = 1000;
-
-    erase();
-
-    function randomWord(prev) {
-      var next = words[Math.floor(Math.random() * numWords)];
-      return (next === prev) ? randomWord(prev) : next;
-    };
-    
-    function type() {
-      if (currWord === fullWord) {
-        setTimeout(erase, pause);
-      } else {
-        setTimeout(type, typespeed);
-        currWord  = fullWord.slice(0, currWord.length + 1);
-      }
-      console.innerHTML = currWord;
-    }
-
-    function erase() {
-        if (currWord === '') {
-            fullWord = randomWord(fullWord);
-            setTimeout(type, pause);
-        } else {
-          setTimeout(erase, typespeed);
-          currWord  = fullWord.slice(0, currWord.length - 1);
-        } 
-        console.innerHTML = currWord;
-    }
+    type(words);
   })();
 </script>
 </html>
