Add schools button

--- a/client/career/index.html
+++ b/client/career/index.html
@@ -112,6 +112,9 @@
                 <a class="pure-button" href="./expert">
                   Become an Advisor
                 </a>
+                <a class="pure-button" href="/school/">
+                  Need Help with Schools?
+                </a>
           </div>
         </div>
       </div>
