Fix relative links

--- a/client/career/index.html
+++ b/client/career/index.html
@@ -9,18 +9,18 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/pure-min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/grids-responsive-min.css" rel="stylesheet">
   <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-  <link href="css/main.css" rel="stylesheet">
+  <link href="/css/main.css" rel="stylesheet">
 </head>
 <body>
   <header class="header">
     <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-      <a class="pure-menu-heading" href="/">LegUp</a>
+      <a class="pure-menu-heading" href="/career/">LegUp</a>
       <ul class="pure-menu-list">
         <li class="pure-menu-item pure-menu-selected">
           <a href="#how">How It Works</a>
         </li>
         <li class="pure-menu-item">
-          <a class="pure-menu-link highlight" href="./request">Get Connected</a>
+          <a class="pure-menu-link highlight" href="./request/">Get Connected</a>
         </li>
       </ul>
     </div>
@@ -32,7 +32,7 @@
         <h1 class="splash-head sub-head">Get help from someone who's <span class="avoid-wrap">been there,&nbsp;</span><span class="avoid-wrap">done that.</span></h1>
       </div>
       <div class="main-cta">
-        <a class="pure-button pure-button-primary" href="./request">Get Connected</a>
+        <a class="pure-button pure-button-primary" href="./request/">Get Connected</a>
       </div>
     </div>
     <div class="content-wrapper">
@@ -41,15 +41,15 @@
         <h2 class="content-head is-center">How it works</h2>
         <div class="pure-g">
           <div class="l-box sides-only pure-u-1 pure-u-lg-1-3">
-            <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/request.png"> Request an advisor</h3>
+            <h3 class="content-subhead"><img class="pure-img-responsive" src="/img/request.png"> Request an advisor</h3>
             <p>Tell us what you need and who would be most qualified to help you.</p>
           </div>
           <div class="l-box sides-only pure-u-1 pure-u-lg-1-3">
-            <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/talking.png"> We'll find a match</h3>
+            <h3 class="content-subhead"><img class="pure-img-responsive" src="/img/talking.png"> We'll find a match</h3>
             <p>We connect you with someone who has the right knowledge or experience and set up a conversation on your terms.</p>
           </div>
           <div class="l-box sides-only pure-u-1 pure-u-lg-1-3">
-            <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/hired.png"> Get results</h3>
+            <h3 class="content-subhead"><img class="pure-img-responsive" src="/img/hired.png"> Get results</h3>
             <p>You pay your advisor for their time only after you get the help you need.</p>
           </div>
         </div>
@@ -85,19 +85,19 @@
         <h2 class="content-head is-center">How we help</h2>
         <div class="pure-g">
           <div class="l-box sides-only pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-            <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/unlock.png"> Actionable</h3>
+            <h3 class="content-subhead"><img class="pure-img-responsive" src="/img/unlock.png"> Actionable</h3>
             <p>Access informed feedback to achieve your career goals.</p>
           </div>
           <div class="l-box sides-only pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-            <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/targeted.png"> Targeted</h3>
+            <h3 class="content-subhead"><img class="pure-img-responsive" src="/img/targeted.png"> Targeted</h3>
             <p>Get tailored advice from someone who's uniquely qualified to help you.</p>
           </div>
           <div class="l-box sides-only pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-            <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/quick.png"> Quick</h3>
+            <h3 class="content-subhead"><img class="pure-img-responsive" src="/img/quick.png"> Quick</h3>
             <p>Access information while it's still relevant to you. Have a specific deadline? Let us know.</p>
           </div>
           <div class="l-box sides-only pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
-            <h3 class="content-subhead"><img class="pure-img-responsive" src="./img/reliable.png"> Reliable</h3>
+            <h3 class="content-subhead"><img class="pure-img-responsive" src="/img/reliable.png"> Reliable</h3>
             <p>Ask pointed questions and get unfiltered answers, with the option to stay anonymous, if you prefer.</p>
           </div>
         </div>
@@ -106,10 +106,10 @@
         <h2 class="content-head is-center">Join our community</h2>
         <div class="pure-g">
           <div class="pure-u-1 is-center">
-                <a class="pure-button" href="./request">
+                <a class="pure-button" href="./request/">
                   Get Connected
                 </a>
-                <a class="pure-button" href="./expert">
+                <a class="pure-button" href="/expert/">
                   Become an Advisor
                 </a>
                 <a class="pure-button" href="/school/">
