--- a/client/career/request/index.html
+++ b/client/career/request/index.html
@@ -9,12 +9,12 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/pure-min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/grids-responsive-min.css" rel="stylesheet">
   <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-  <link href="../css/main.css" rel="stylesheet">
+  <link href="/css/main.css" rel="stylesheet">
 </head>
 <body>
   <header class="header">
     <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-      <a class="pure-menu-heading" href="/">LegUp</a>
+      <a class="pure-menu-heading" href="/career/">LegUp</a>
     </div>
   </header>
   <main class="pure-u-1">
@@ -411,5 +411,5 @@
 </body>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.js"></script>
-<script type="text/javascript" src="../js/form.js"></script>
+<script type="text/javascript" src="/js/form.js"></script>
 </html>
