--- a/client/career/thankyou/index.html
+++ b/client/career/thankyou/index.html
@@ -9,7 +9,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/pure-min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/grids-responsive-min.css" rel="stylesheet">
   <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-  <link href="../css/main.css" rel="stylesheet">
+  <link href="/css/main.css" rel="stylesheet">
 </head>
 <body>
   <header class="header">
@@ -17,20 +17,28 @@
       <a class="pure-menu-heading" href="/">LegUp</a>
     </div>
   </header>
-  <main class="pure-u-1">
-    <div class="content">
-      <section class="md-l-box">
+  <main class="pure-u-1 content">
+    <section>
+      <div class="m-box">
         <legend class="pure-u-1">
           <h2 class="no-margin">Thank you!</h2>
           <h4 class="no-margin">We will contact you shortly about your request.</h4>
         </legend>
-      </section>
-    </div>
-
-    <div class="pure-u-1 is-center">
-      <a class="button sm-fill" href="../request"><span>Submit Another Request</span></a>
-    </div>
-
+      </div>
+      <div class="pure-u-1 is-center m-box">
+        <a class="button sm-fill" href="../request/"><span>Submit Another Request</span></a>
+      </div>
+    </section>
+    <section>
+      <div class="m-box">
+        <legend class="pure-u-1">
+          <h2 class="no-margin">Interested in helping others with your knowledge and experience?</h2>
+        </legend>
+      </div>
+      <div class="pure-u-1 is-center m-box">
+        <a class="button sm-fill" href="/expert/"><span>Become an Advisor</span></a>
+      </div>
+    </section>
     <footer class="m-box ribbon dark-ribbon footer">
       <a href="mailto:moashared@gmail.com">Contact Us</a>
     </footer>
