--- a/client/career/request/index.html
+++ b/client/career/request/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <header class="header">
-    <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
+    <div class="home-menu pure-menu pure-menu-horizontal">
       <a class="pure-menu-heading" href="/career/">LegUp</a>
     </div>
   </header>
