Swap out testimonial

--- a/client/career/index.html
+++ b/client/career/index.html
@@ -66,16 +66,14 @@
             </div>
             <div class="m-box pure-u-1 pure-u-lg-1-3">
               <blockquote>
-                <p>"My advisor helped me fix many of the crucial mistakes I was making in my interviews and helped me <span>prepare for the specific questions</span> I could expect at his company and others like it."</p>
-                <cite>- Brand Manager, Kraft </cite>
+                <p>"My advisor helped me fix many of the crucial mistakes I was making in my residency interviews and helped me <span>prepare for the specific questions</span> I could expect at his company and others like it."</p>
+                <cite>- Internal Medicine Resident, UCSF</cite>
               </blockquote>
             </div>
             <div class="m-box pure-u-1 pure-u-lg-1-3">
               <blockquote>
                 <p>"I had several offers I was really excited about, but talking to people who had worked in my exact role let me get the <span>inside scoop</span> on pay, culture, and work-life balance so I could make the right choice for my career."</p>
-                <cite>
-                  - Consultant, Accenture
-                </cite>
+                <cite>- Brand Manager, Kraft</cite>
               </blockquote>
             </div>
           </div>
