Use appropriate href url to home page

--- a/client/career/thankyou/index.html
+++ b/client/career/thankyou/index.html
@@ -14,7 +14,7 @@
 <body>
   <header class="header">
     <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-      <a class="pure-menu-heading" href="/">LegUp</a>
+      <a class="pure-menu-heading" href="/career/">LegUp</a>
     </div>
   </header>
   <main class="pure-u-1 content">
