--- a/client/school/request/index.html
+++ b/client/school/request/index.html
@@ -14,7 +14,7 @@
 <body>
   <header class="header">
     <div class="home-menu pure-menu pure-menu-horizontal">
-      <a class="pure-menu-heading" href="/career/">LegUp</a>
+      <a class="pure-menu-heading" href="/school/">LegUp</a>
     </div>
   </header>
   <main class="pure-u-1">
