Reduce top margin in request page

--- a/client/career/request/index.html
+++ b/client/career/request/index.html
@@ -17,7 +17,7 @@
       <a class="pure-menu-heading" href="/career/">LegUp</a>
     </div>
   </header>
-  <main class="pure-u-1">
+  <main class="no-top-margin">
     <div class="content">
       <form class="pure-form md-l-box" id="survey">
         <section>
