--- a/client/school/index.html
+++ b/client/school/index.html
@@ -86,7 +86,7 @@
         <div class="pure-g">
           <div class="l-box sides-only pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
             <h3 class="content-subhead"><img class="pure-img-responsive" src="/img/unlock.png"> Actionable</h3>
-            <p>Access informed feedback to achieve your career goals.</p>
+            <p>Access informed feedback from an advisor who's incentivized to help you with your specific need</p>
           </div>
           <div class="l-box sides-only pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
             <h3 class="content-subhead"><img class="pure-img-responsive" src="/img/targeted.png"> Targeted</h3>
