--- a/client/school/request/index.html
+++ b/client/school/request/index.html
@@ -293,12 +293,12 @@
                 <fieldset required>
                   <div class="radio">
                     <label>
-                      <input type="radio" name="request_submitter_privacy" required/><i class="helper"></i>I'm OK sharing my name and profile with the advisor
+                      <input type="radio" name="request_submitter_privacy" value="yes_share" required/><i class="helper"></i>I'm OK sharing my name and profile with the advisor
                     </label>
                   </div>
                   <div class="radio">
                     <label>
-                      <input type="radio" name="request_submitter_privacy" required/><i class="helper"></i>Please DO NOT share my name and profile -- only use generic description
+                      <input type="radio" name="request_submitter_privacy" value="no_share" required/><i class="helper"></i>Please DO NOT share my name and profile -- only use generic description
                     </label>
                   </div>
                 </fieldset>
