--- a/client/school/request/index.html
+++ b/client/school/request/index.html
@@ -181,7 +181,7 @@
               <span class="label">Select all that apply:</legend>
             </fieldset>
             <div class="query-group pure-g">
-              <fieldset class="pure-u-1 checkbox">
+              <fieldset class="pure-u-1 checkbox greyed">
                 <label>
                   <input type="checkbox" name="works_company"/><i class="helper"></i>works at the company
                 </label>
@@ -195,7 +195,7 @@
             </div>
 
             <div class="query-group pure-g">
-              <fieldset class="pure-u-1 checkbox">
+              <fieldset class="pure-u-1 checkbox greyed">
                 <label>
                   <input type="checkbox" name="works_same_role"/><i class="helper"></i>works in the same role
                 </label>
@@ -209,7 +209,7 @@
             </div>
 
             <div class="query-group pure-g">
-              <fieldset class="pure-u-1 checkbox">
+              <fieldset class="pure-u-1 checkbox greyed">
                 <label>
                   <input type="checkbox" name="currently_works"/><i class="helper"></i>currently works there
                 </label>
