Fix radio button privacy responses

--- a/client/career/request/index.html
+++ b/client/career/request/index.html
@@ -298,7 +298,7 @@
                   </div>
                   <div class="radio">
                     <label>
-                      <input type="radio" name="request_submitter_privacy" value="no_share" required/><i class="helper"></i>Please DO NOT share my name and profile -- only use generic description
+                      <input type="radio" name="request_submitter_privacy" value="no_private" required/><i class="helper"></i>Please DO NOT share my name and profile -- only use generic description
                     </label>
                   </div>
                 </fieldset>
