--- a/client/expert/index.html
+++ b/client/expert/index.html
@@ -56,12 +56,12 @@
                 <fieldset required>
                   <div class="radio">
                     <label>
-                      <input type="radio" name="request_submitter_privacy" required/><i class="helper"></i>I'm OK sharing my name and profile with potential clients
+                      <input type="radio" name="request_submitter_privacy" value="yes_share" required/><i class="helper"></i>I'm OK sharing my name and profile with potential clients
                     </label>
                   </div>
                   <div class="radio">
                     <label>
-                      <input type="radio" name="request_submitter_privacy" required/><i class="helper"></i>Please DO NOT share my name and profile -- only use generic description
+                      <input type="radio" name="request_submitter_privacy"  value="no_private" required/><i class="helper"></i>Please DO NOT share my name and profile -- only use generic description
                     </label>
                   </div>
                 </fieldset>
